# movie-manager

./: .gitignore  Cargo.toml  Tasks.toml  init.sh  readme.md
client/: index.html  main.css  main.js  optimize.sh
client/src/: Main.elm
src/: lib.rs  main.rs
