[package]
name = "movie_maker"
description = "An interface for managing separate folders of video files."
version = "1.0.0"
authors = ["greg <gperlman27@gmail.com>"]

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
web-view = "0.4.0"
glob = "0.2.11"
serde_json = "1.0.33"
serde_derive = "1.0.82"
serde = "1.0.82"
open = "1.2.2"
itertools = "0.8.0"

[package.metadata.bundle]
name = "Movie Manager"
identifier = "com.gpnovus.moviemanager"
version = "1.0.0"
resources = ["client"]
copyright = "Copyright (c) Greg Perlamn 2018. All rights reserved."
short_description = "An interface for managing separate folders of video files."