[package]
name = "movie_manager"
description = "An interface for managing separate folders of video files."
version = "1.0.0"
authors = ["greg <gperlman27@gmail.com>"]

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
web-view = "0.4.0"
glob = "0.2.11"
serde_json = "1.0.33"
serde_derive = "1.0.82"
serde = "1.0.82"
open = "1.2.2"
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"