[package]
name = "movie_manager"
description = "An interface for managing separate folders of video files."
version = "0.0.1"
authors = ["greg <gperlman27@gmail.com>"]

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
web-view = "0.4.0"
glob = "0.2.11"
serde_json = "1.0.33"
serde_derive = "1.0.82"
serde = "1.0.82"
open = "1.2.2"
nfd = "0.0.4"
